Fixes white space for primary menu and sidebar list items

--- a/less/style.less
+++ b/less/style.less
@@ -167,6 +167,11 @@
 		}
 	}
 
+	li {
+		margin-bottom: 0;
+		margin-top: 0;
+	}
+
 	.menu, .sub-menu {
 		list-style: none;
 		margin: 0;
@@ -544,6 +549,11 @@
 			&.button {
 				color: white;
 			}
+		}
+
+		li {
+			margin-bottom: 0;
+			margin-top: 0;
 		}
 
 		.widget-title {
